--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -133,30 +133,33 @@
                                 <span class="menu-text">Dashboard</span>
                             </a>
                         </li>
-                        <li>
-                            <a asp-page="/Blocks/Index">
-                                <span class="icon is-small"><i class="fas fa-server"></i></span>
-                                <span class="menu-text">Blocks</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a asp-page="/Transactions/Index">
-                                <span class="icon is-small"><i class="fas fa-microchip"></i></span>
-                                <span class="menu-text">Transactions</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a asp-page="/Explorer">
-                                <span class="icon is-small"><i class="fab fa-wpexplorer"></i></span>
-                                <span class="menu-text">Explorer</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a asp-page="/NodeLog/Index">
-                                <span class="icon is-small"><i class="far fa-file-alt"></i></span>
-                                <span class="menu-text">Logs</span>
-                            </a>
-                        </li>
+                        @if (Model.ActiveProject != null)
+                        { 
+                            <li>
+                                <a asp-page="/Blocks/Index">
+                                    <span class="icon is-small"><i class="fas fa-server"></i></span>
+                                    <span class="menu-text">Blocks</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-page="/Transactions/Index">
+                                    <span class="icon is-small"><i class="fas fa-microchip"></i></span>
+                                    <span class="menu-text">Transactions</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-page="/Explorer">
+                                    <span class="icon is-small"><i class="fab fa-wpexplorer"></i></span>
+                                    <span class="menu-text">Explorer</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-page="/NodeLog/Index">
+                                    <span class="icon is-small"><i class="far fa-file-alt"></i></span>
+                                    <span class="menu-text">Logs</span>
+                                </a>
+                            </li>
+                        }
                     </ul>
                     <p class="menu-label">Configuration</p>
                     <ul class="menu-list">
