Update page title class

--- a/src/Tippy/Pages/Blocks/Index.cshtml
+++ b/src/Tippy/Pages/Blocks/Index.cshtml
@@ -3,7 +3,7 @@
 @using Tippy.Ctrl 
 @{ ViewData["Title"] = "Blocks"; }
 
-<h1 class="title has-text-primary">Blocks</h1>
+<h1 class="title">Blocks</h1>
 
 @if (Model.ActiveProject != null && ProcessManager.IsRunning(Model.ActiveProject))
 {
