--- a/src/Tippy/Pages/Transactions/Index.cshtml
+++ b/src/Tippy/Pages/Transactions/Index.cshtml
@@ -3,7 +3,7 @@
 @using Tippy.Ctrl
 @{ ViewData["Title"] = "Transactions"; }
 
-<h1 class="title has-text-primary">Transactions</h1>
+<h1 class="title">Transactions</h1>
 
 @if (Model.ActiveProject != null && ProcessManager.IsRunning(Model.ActiveProject))
 {
